# CookieClickerCppTools

./: CMakeLists.txt  README.md  compare_prng.cpp  generate_database.cpp  random.cpp  random.h  random_utils.h  stock.h  stock_analysis.cpp  stock_analysis.h  test_random.cpp  test_random_utils.cpp  test_stock.cpp  test_stock_analysis.cpp
